Fixed overflowing div on Github page. Realized that position should be tested in this instance as element was correct size but wrong position.

--- a/app/styles/_pageSpecific.scss
+++ b/app/styles/_pageSpecific.scss
@@ -969,12 +969,12 @@ $sublime-gold: #daa520;
 		}
 	}
 
-	@media(min-width: $screen-phone){
+	@media(min-width: $screen-sm){
 		.pro-fixed {
 			left: 0px;
 			position: fixed;
 			top: 70px;
-			width: 30%;
+			width: 100%;
 		}
 
 		.main {
@@ -988,11 +988,17 @@ $sublime-gold: #daa520;
 				font-size: 2em;
 			}
 		}
+		.pro-fixed {
+			left: 0px;
+			position: fixed;
+			top: 70px;
+			width: 30%;
+		}
 	}
 
-	@media(min-width: $screen-desktop){
+	// @media(min-width: $screen-desktop){
 
-	}	
+	// }	
 
 }
 
